mtls/istio-ambient/allow-service-c-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-service-c-only
  namespace: service-d-ns
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/service-c-ns/sa/default"
