mtls/istio-ambient/deny-all-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: service-d-ns
spec: {}
